--- a/style.css
+++ b/style.css
@@ -308,6 +308,17 @@
             }
         }
 
+        @media (max-width: 700px) {
+            .header h1 {
+                font-size: 1.5em;
+            }
+          .card-message p {
+                font-size: 0.9em;
+            }
+        }
+
+
+
         @media (max-width: 767px) {
             .header h1 {
                 font-size: 1.5em;
