--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
         body {
             font-family: 'Georgia', serif;
-            background: linear-gradient(195deg, #050812 20%, #8d9b30 100%);
+            background: linear-gradient(125deg, #0c101f 20%, #8d9b30 100%);
             min-height: 100vh;
             display: flex;
             color: gold;
@@ -416,7 +416,7 @@
 
         .footer-content {
             max-width: 1200px;
-            margin: 0 auto;
+            margin: 60px auto;
             position: relative;
             z-index: 1;
         }
@@ -560,3 +560,7 @@
 .music-btn:hover {
   transform: scale(1.05);
 }
+
+
+
+
